Fix color of blue botton on mobile

--- a/src/components/FloorPlan.module.css
+++ b/src/components/FloorPlan.module.css
@@ -35,6 +35,7 @@
     outline: 0;
     border: none;
     background-color: #0ea5e9;
+    color: white;
     font-size: 14px;
     cursor: pointer;
 }
